--- a/Tienda final/src/vistas/RegistrarUsuario.form
+++ b/Tienda final/src/vistas/RegistrarUsuario.form
@@ -90,6 +90,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtUserName">
       <Events>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtUserNameFocusLost"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtUserNameActionPerformed"/>
       </Events>
     </Component>
