filtros de precio

--- a/Tienda final/src/vistas/Facturas.form
+++ b/Tienda final/src/vistas/Facturas.form
@@ -217,7 +217,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="981" max="32767" attributes="0"/>
+              <EmptySpace pref="978" max="32767" attributes="0"/>
           </Group>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
@@ -267,11 +267,10 @@
                       <Component id="txtFiltro1" alignment="0" max="32767" attributes="0"/>
                       <Component id="cboFiltro1" alignment="0" max="32767" attributes="0"/>
                       <Component id="jLabel6" alignment="0" max="32767" attributes="0"/>
-                      <Component id="rbMenorIgualDiezMillones" alignment="0" max="32767" attributes="0"/>
-                      <Component id="rbMenorIgualUnMillon" alignment="0" max="32767" attributes="0"/>
                       <Component id="rbMayorDiezMillones" alignment="0" max="32767" attributes="0"/>
+                      <Component id="rbHastaDiezMillones" alignment="0" max="32767" attributes="0"/>
                       <Component id="rbMayorCero1" alignment="0" max="32767" attributes="0"/>
-                      <Component id="rbMenorIgualCienMil2" alignment="1" max="32767" attributes="0"/>
+                      <Component id="rbHastaUnMillon" alignment="1" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -289,14 +288,12 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="rbMayorCero1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rbMenorIgualCienMil2" min="-2" max="-2" attributes="0"/>
+                  <Component id="rbHastaUnMillon" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rbMenorIgualUnMillon" min="-2" pref="21" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rbMenorIgualDiezMillones" min="-2" max="-2" attributes="0"/>
+                  <Component id="rbHastaDiezMillones" min="-2" pref="21" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="rbMayorDiezMillones" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="398" max="32767" attributes="0"/>
+                  <EmptySpace pref="425" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -332,28 +329,23 @@
             <Property name="text" type="java.lang.String" value="Precio"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JRadioButton" name="rbMenorIgualDiezMillones">
-          <Properties>
-            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="btnGroupFiltro"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Menor o igual a 10.000.000"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="rbMenorIgualUnMillon">
-          <Properties>
-            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="btnGroupFiltro"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Menor o igual a 1.000.000"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JRadioButton" name="rbMayorDiezMillones">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="btnGroupFiltro"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Mayor a 10.000.000"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbMayorDiezMillonesActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JRadioButton" name="rbHastaDiezMillones">
+          <Properties>
+            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+              <ComponentRef name="btnGroupFiltro"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Entre 1.000.000 - 10.000.000"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rbMayorCero1">
@@ -367,15 +359,15 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbMayorCero1ActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JRadioButton" name="rbMenorIgualCienMil2">
+        <Component class="javax.swing.JRadioButton" name="rbHastaUnMillon">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="btnGroupFiltro"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Menor o igual a 100.000"/>
+            <Property name="text" type="java.lang.String" value="Entre 100.000 - 1.000.000"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbMenorIgualCienMil2ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbHastaUnMillonActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
