--- a/Tienda final/src/vistas/Facturas.form
+++ b/Tienda final/src/vistas/Facturas.form
@@ -2,193 +2,6 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Container class="javax.swing.JPanel" name="jPanel3">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
-        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-          <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
-            <EtchetBorder/>
-          </Border>
-        </Property>
-      </Properties>
-
-      <Layout>
-        <DimensionLayout dim="0">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="txtFiltro" alignment="0" max="32767" attributes="0"/>
-                              <Component id="cboFiltro" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
-                              <Component id="cbxCompra" alignment="0" max="32767" attributes="0"/>
-                              <Component id="cbxVenta" alignment="0" max="32767" attributes="0"/>
-                              <Component id="cbxObsequio" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jLabel3" alignment="0" max="32767" attributes="0"/>
-                              <Component id="cbxActivo" alignment="1" max="32767" attributes="0"/>
-                              <Component id="cbxInactivo" alignment="0" max="32767" attributes="0"/>
-                              <Component id="rbMayorIgualCero" alignment="0" max="32767" attributes="0"/>
-                              <Component id="rbMenorIgualCien" alignment="0" pref="159" max="32767" attributes="0"/>
-                              <Component id="rbMenorIgualMil" alignment="0" pref="159" max="32767" attributes="0"/>
-                              <Component id="rbMenorIgualQuinientos" alignment="0" pref="159" max="32767" attributes="0"/>
-                              <Component id="jLabel4" alignment="1" max="32767" attributes="0"/>
-                              <Component id="rbMayorMil" alignment="0" pref="159" max="32767" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <Component id="btnConsultar" alignment="0" max="32767" attributes="0"/>
-                  </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-              </Group>
-          </Group>
-        </DimensionLayout>
-        <DimensionLayout dim="1">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="cboFiltro" min="-2" pref="30" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="txtFiltro" min="-2" pref="30" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="cbxCompra" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="cbxVenta" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="cbxObsequio" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="cbxActivo" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="cbxInactivo" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rbMayorIgualCero" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rbMenorIgualCien" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rbMenorIgualQuinientos" min="-2" pref="21" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rbMenorIgualMil" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rbMayorMil" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="btnConsultar" min="-2" pref="40" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-              </Group>
-          </Group>
-        </DimensionLayout>
-      </Layout>
-      <SubComponents>
-        <Component class="javax.swing.JComboBox" name="cboFiltro">
-          <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="Codigo"/>
-                <StringItem index="1" value="Nombre"/>
-                <StringItem index="2" value="Categoria"/>
-              </StringArray>
-            </Property>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-          </AuxValues>
-        </Component>
-        <Component class="javax.swing.JTextField" name="txtFiltro">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFiltroActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel2">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="0"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Movimientos"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JCheckBox" name="cbxCompra">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Compra"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JCheckBox" name="cbxVenta">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Venta"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JCheckBox" name="cbxObsequio">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Obsequio"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel3">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="0"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Precio"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JCheckBox" name="cbxActivo">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Activo"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JCheckBox" name="cbxInactivo">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Inactivo"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel4">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="0"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Estado"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="rbMayorIgualCero">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Mayor o igual a 0"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="rbMenorIgualCien">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Menor o igual a 100"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="rbMenorIgualMil">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Menor o igual a 1000"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="rbMenorIgualQuinientos">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Menor o igual a 500"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="rbMayorMil">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Mayor a 1000"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JButton" name="btnConsultar">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Consultar"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnConsultarActionPerformed"/>
-          </Events>
-        </Component>
-      </SubComponents>
-    </Container>
     <Component class="javax.swing.ButtonGroup" name="btnGroupFiltro">
     </Component>
   </NonVisualComponents>
@@ -302,9 +115,10 @@
         <Component class="javax.swing.JComboBox" name="cboFiltro1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="3">
                 <StringItem index="0" value="Numero Factura"/>
                 <StringItem index="1" value="Cliente"/>
+                <StringItem index="2" value="Vendedor"/>
               </StringArray>
             </Property>
             <Property name="autoscrolls" type="boolean" value="true"/>
