--- a/Tienda final/src/vistas/ColillaVenta.form
+++ b/Tienda final/src/vistas/ColillaVenta.form
@@ -104,7 +104,7 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace pref="13" max="32767" attributes="0"/>
+                      <EmptySpace pref="16" max="32767" attributes="0"/>
                       <Component id="jLabel1" min="-2" pref="616" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -160,6 +160,10 @@
                               <Component id="TxtCliente" max="32767" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                      <Component id="lblFechaDeGeneracion" min="-2" pref="121" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="txtFechaDeGeneracion" min="-2" pref="167" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -171,6 +175,8 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="TxtCajero" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblFechaDeGeneracion" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtFechaDeGeneracion" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -225,6 +231,13 @@
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
+            </Component>
+            <Component class="javax.swing.JLabel" name="lblFechaDeGeneracion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Fecha de generacion:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="txtFechaDeGeneracion">
             </Component>
           </SubComponents>
         </Container>
