--- a/Tienda final/src/vistas/Facturas.form
+++ b/Tienda final/src/vistas/Facturas.form
@@ -84,6 +84,14 @@
                       <Component id="rbHastaDiezMillones" alignment="0" max="32767" attributes="0"/>
                       <Component id="rbMayorCero1" alignment="0" max="32767" attributes="0"/>
                       <Component id="rbHastaUnMillon" alignment="1" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="lblTotalPor" min="-2" pref="82" max="-2" attributes="0"/>
+                              <Component id="lblTotalCaracter" min="-2" pref="116" max="-2" attributes="0"/>
+                              <Component id="txtTotalCaracter" alignment="0" min="-2" pref="142" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -106,7 +114,13 @@
                   <Component id="rbHastaDiezMillones" min="-2" pref="21" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="rbMayorDiezMillones" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="425" max="32767" attributes="0"/>
+                  <EmptySpace pref="330" max="32767" attributes="0"/>
+                  <Component id="lblTotalPor" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="lblTotalCaracter" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="txtTotalCaracter" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -182,6 +196,18 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbHastaUnMillonActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lblTotalPor">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Total por:"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lblTotalCaracter">
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtTotalCaracter">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTotalCaracterActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
